--- a/zt-architecture/config.json
+++ b/zt-architecture/config.json
@@ -1,4 +1,9 @@
 {
     "ip_address": "127.0.0.1",
-    "port": 5000
+    "port": 5000,
+    "dbHost": "localhost",
+    "dbPort": 5432,
+    "dbDatabase": "zt-ehealth",
+    "dbUser": "postgres",
+    "dbPassword": "zerotrust"
 }
